[metadata]
name = ceilometer-infoblox
summary = Infoblox custom meters for Ceilometer
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    ceilometer_infoblox

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = ceilometer_infoblox/locale
domain = ceilometer-infoblox

[update_catalog]
domain = ceilometer-infoblox
output_dir = ceilometer_infoblox/locale
input_file = ceilometer_infoblox/locale/ceilometer-infoblox.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = ceilometer_infoblox/locale/ceilometer-infoblox.pot

[entry_points]
ceilometer.discover =
    nios_instances = ceilometer_infoblox.discovery:NIOSDiscovery

ceilometer.poll.compute =
    nios.dns.qps = ceilometer_infoblox.pollsters.dns:QPSPollster
    nios.dns.chr = ceilometer_infoblox.pollsters.dns:CHRPollster
    nios.dhcp.discovers = ceilometer_infoblox.pollsters.dhcp:DiscoversPollster
    nios.dhcp.requests = ceilometer_infoblox.pollsters.dhcp:RequestsPollster
    nios.dhcp.releases = ceilometer_infoblox.pollsters.dhcp:ReleasesPollster
    nios.dhcp.offers = ceilometer_infoblox.pollsters.dhcp:OffersPollster
    nios.dhcp.acks = ceilometer_infoblox.pollsters.dhcp:AcksPollster
    nios.dhcp.nacks = ceilometer_infoblox.pollsters.dhcp:NacksPollster
    nios.dhcp.declines = ceilometer_infoblox.pollsters.dhcp:DeclinesPollster
    nios.dhcp.informs = ceilometer_infoblox.pollsters.dhcp:InformsPollster
    nios.dhcp.others = ceilometer_infoblox.pollsters.dhcp:OthersPollster
